[project]
name = "custom-telephony-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgram-sdk>=4.5.0",
    "fastapi>=0.115.14",
    "grop>=0.0.1",
    "groq>=0.29.0",
    "pyngrok>=7.2.11",
    "python-dotenv>=1.1.1",
    "twilio>=9.6.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.uv.workspace]
members = ["src/Groq"]
